--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^8.19.3"
+    "mongoose": "^8.19.3",
+    "todox": "file:.."
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
